# training-labs

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: README.rst  requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
labs/: .pylintrc  __init__.py  autostart  config  lib  scripts  st.py  tools  wbatch
labs/osbash/: osbash.sh
labs/osbash/config/: admin-openstackrc.sh  config.base  config.compute  config.compute1  config.controller  config.network  config.pxeserver  credentials  demo-openstackrc.sh  deploy.osbash  hosts.multi  localrc  openstack  provider.kvm  provider.virtualbox  scripts.centos_base  scripts.fedora_base  scripts.ubuntu_base  scripts.ubuntu_cluster  scripts.ubuntu_nodes_only  scripts.ubuntu_pxecluster  scripts.ubuntu_pxeserver
labs/osbash/img/: README.rst
labs/osbash/lib/: functions-common-devstack  functions.fedora.sh  functions.guest  functions.guest.sh  functions.sh  functions.ubuntu.sh
labs/osbash/scripts/: config_external_network.sh  config_private_network.sh  config_public_network.sh  config_tenant_network.sh  etc_hosts.sh  pre-download.sh  shutdown.sh  shutdown_controller.sh  yum_init.sh  yum_update.sh  zero_empty.sh
labs/osbash/tools/: get_node_logs.sh  get_upstart_logs.sh  git_info.sh  log_snapshot_split.py  repeat-test.sh  restore-cluster.sh  test-once.sh
labs/stacktrain/: __init__.py  batch_for_windows.py  setup.py
labs/stacktrain/batch_for_windows_templates/: template-begin_base_bat  template-begin_node_bat  template-create_hostnet_bat  template-end_file_bat  template-file_header_bat  template-mkdirs_bat
labs/stacktrain/config/: general.py  virtualbox.py
labs/stacktrain/core/: autostart.py  cond_sleep.py  download.py  functions_host.py  helpers.py  iso_image.py  keycodes.py  node_builder.py  report.py  ssh.py
labs/stacktrain/distros/: distro.py  ubuntu_14_04_server_amd64.py  ubuntu_14_04_server_i386.py  ubuntu_16_04_server_amd64.py  ubuntu_18_04_server_amd64.py
labs/stacktrain/kvm/: keycodes.py  (+3 more)
labs/tests/: stacktrain.py
lib/osbash/: lib.ubuntu-14.04-server-amd64
oslabs/tests/: oslabs.py
tools/: generate-labs  generate-labs.sh
(+94 files in other folders)
