[metadata]
name = training-labs
version = 0.0.1
summary = Automated OpenStack Deployments
description-files =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    training-labs

[build_sphinx]
build-dir = doc/build
source-dir = doc/source
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = training-labs/locale
domain = training-labs

[update_catalog]
domain = training-labs
output_dir = training-labs/locale
input_file = training-labs/locale/labs.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = training-labs/locale/labs.pot

[pbr]
warnerrors = True

[wheel]
universal = 1
